--- a/.github/workflows/MakeIPA.yml
+++ b/.github/workflows/MakeIPA.yml
@@ -22,6 +22,7 @@ jobs:
         brew install make
         gem install cocoapods
         brew install ldid
+        brew unlink ldid
         brew install ldid-procursus
 
     - name: Install theos and ct_bypass
