--- a/.github/workflows/MakeIPA.yml
+++ b/.github/workflows/MakeIPA.yml
@@ -34,13 +34,13 @@ jobs:
     - name: Build RootHelperSample and Components
       run: |
         cd RootHelperSample
-        xcodebuild -project RootHelperSample.xcodeproj -scheme RootHelperSample -sdk iphoneos -configuration Release build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -destination 'generic/platform=iOS Simulator'
+        xcodebuild -project RootHelperSample.xcodeproj -scheme RootHelperSample -sdk iphoneos -configuration Release build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -destination 'platform=iOS Simulator,name=iPhone 13'
         make -C Exploits/fastPathSign
         make -C launchdshim/SpringBoardShim
         make -C launchdshim/SpringBoardShim/SpringBoardHook
         make -C launchdshim/launchdhook
         cd ..
-
+        
     - name: Build usprebooter
       run: |
         cd usprebooter
