--- a/.github/workflows/MakeIPA.yml
+++ b/.github/workflows/MakeIPA.yml
@@ -34,6 +34,7 @@ jobs:
     - name: Build RootHelperSample and Components
       run: |
         cd RootHelperSample
+        xcrun simctl list devices
         xcodebuild -project RootHelperSample.xcodeproj -scheme RootHelperSample -sdk iphoneos -configuration Release build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -destination 'platform=iOS Simulator,name=iPhone 13'
         make -C Exploits/fastPathSign
         make -C launchdshim/SpringBoardShim
