--- a/.github/workflows/MakeIPA.yml
+++ b/.github/workflows/MakeIPA.yml
@@ -8,9 +8,9 @@ on:
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: macos-13
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Update submodules
       run: git submodule update --init --recursive
 
