--- a/.github/workflows/MakeIPA.yml
+++ b/.github/workflows/MakeIPA.yml
@@ -35,7 +35,7 @@ jobs:
       run: |
         cd RootHelperSample
         xcrun simctl list devices
-        xcodebuild -project RootHelperSample.xcodeproj -scheme RootHelperSample -sdk iphoneos -configuration Release build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -destination 'platform=iOS Simulator,name=iPhone 13,OS=15.5'
+        xcodebuild -project RootHelperSample.xcodeproj -scheme RootHelperSample -sdk iphoneos -configuration Release build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -destination 'platform=iOS Simulator,name=iPad Pro (11-inch) (4th generation),OS=17.0'
         make -C Exploits/fastPathSign
         make -C launchdshim/SpringBoardShim
         make -C launchdshim/SpringBoardShim/SpringBoardHook
